--- a/rootdir/lpm.rc
+++ b/rootdir/lpm.rc
@@ -9,7 +9,7 @@ sysclktz 0
 on boot
     # set cpu governor to powersave while in charging mode
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
-
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor powersave
     class_start default
 
 ## Daemon processes to be run by init.
