--- a/rootdir/init.samsungjanice.rc
+++ b/rootdir/init.samsungjanice.rc
@@ -452,13 +452,9 @@ on charger
     write /sys/devices/system/cpu/cpu1/online 0
     mount ext4 /dev/block/mmcblk0p3 /system wait ro
 
-service playlpm /charger/playlpm
+    service charger /sbin/charger
     class charger
-    user root
-
-service lpmkey /charger/lpmkey
-    class charger
-    user root
+    critical
 
 # Crash Safe Parameter Storage Area, serving production parameter requests from clients.
 # Configuration is read from file "/etc/cspsa.conf" and each found area spawns a CSPSA server
