--- a/configs/sirfgps.conf
+++ b/configs/sirfgps.conf
@@ -16,23 +16,23 @@
 #REAIDING=20
 #CONTROL_PLANE : 1 - CP Enabled, 0 - CP Disabled, for MP3 player or PND
 #ATT_NETWORK_OPERATOR : 1 - for AT&T, 0 - for other network operator
-#UART_DRIVER=/dev/ttyO0
-PROJECT=SAMSUNG_GOLDEN
+PROJECT=SAMSUNG_STE
 UART_DRIVER=/dev/ttyAMA1
-RESET_GPIO=/sys/devices/virtual/sec/gps/GPS_nRST/value
-ONOFF_GPIO=/sys/devices/virtual/sec/gps/GPS_ON_OFF/value
+RESET_GPIO=/sys/class/sec/gps/GPS_nRST/value
+ONOFF_GPIO=/sys/class/sec/gps/GPS_ON_OFF/value
 EXTERNAL_LNA=1
 REF_CLOCK_26MHZ=1
-UART_BAUD_RATE=2
+UART_BAUD_RATE=0
 FREQUENCY_AIDING=0
 SENSOR_AIDING=0
 SET_ID_IMSI=1
+DEBUGGING_FILES=0
+STE=1
 SSL_ENABLED=0
 CERTI_VERSION=0
-CP_RESPONSETIME=3
+CP_RESPONSETIME=2
 CONTROL_PLANE=1
 ATT_NETWORK_OPERATOR=0
-ICS_NETWORK_OPERATOR=0
 EMC_ENABLE=0
-LOG_PATH=/data/
-HWFC_ENABLE=1
+SGEE=0
+LOG_PATH=/sdcard/gps
